welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: '(' expected but identifier found.
while !(2*biscuits==caseOrange +1) {
      ^RunHalf:8: error: illegal start of simple expression
} 
^